@@ -1,0 +1,40 @@
+.. -*-doctest-*-
+
+=============
+Date Criteria
+=============
+
+The DateFormCriterion is provided for rendering relative date fields
+on the search form.
+
+We start with a topic.
+
+    >>> foo_topic = self.folder['foo-topic-title']
+
+Open a browser as an anonymous user.
+
+    >>> from Products.Five.testbrowser import Browser
+    >>> from Products.PloneTestCase import ptc
+    >>> browser = Browser()
+    >>> browser.handleErrors = False
+
+Add a date criterion for the subject/keywords.
+
+    >>> foo_topic.addCriterion(
+    ...     'effectiveRange', 'DateFormCriterion')
+    <DateFormCriterion at
+    /plone/Members/test_user_1_/foo-topic-title/crit__effectiveRange_DateFormCriterion>
+
+Designate the criterion's field as a form field.
+
+    >>> crit = foo_topic.getCriterion('effectiveRange_DateFormCriterion')
+    >>> crit.setFormFields(['value', 'dateRange', 'operation'])
+    
+When viewing the collection in a browser date fields will be
+rendered for the field.
+
+    >>> browser.open(foo_topic.absolute_url())
+    >>> browser.getControl('Effective Range')
+    <ListControl
+    name='form_crit__effectiveRange_DateFormCriterion_value'
+    type='select'>
