@@ -12,6 +12,7 @@ Changelog
 * Fix the handling of postbacks in the comma widget
 * Use a "Search Form" view that only renders the search form
 * Added boolean criteria
+* Added date criteria
 
 0.5 - 2009-01-25
 ----------------
